--- a/main.html
+++ b/main.html
@@ -7,6 +7,19 @@
 </head>
 
 <body>
+	<div>
+	<p>First paragraph</p>
+	<p>vjfaediepguasyyu br rei reifwekb</p>
+	<p>ryeuuieu rekury89wyy fh</p>
+	<p>tewo eruiyotqa awgrquiwry08yrq quyoy09qgyiit9 wydysdgiufoufu</p>
+	</div>
+		<ul>
+		<li>First Item</li>
+		<li>Second Item</li>
+		<li>Third Item</li>
+		<li>Fourth Item</li>
+		<li>Fifth Item</li>
+	</ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
